--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <div class="flex-grow overflow-y-auto flex flex-col">
       <header class="sticky z-30 top-0">
         <%= render "shared/navbar" %>
-        <div id="flash" class="absolute flex flex-col z-40 left-1/2 transform -translate-x-1/2">
+        <div id="flash" class="absolute right-4 z-40 flex flex-col items-end">
           <%= render "shared/flash" %>
         </div>
       </header>
