--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,10 +11,10 @@
     <div class="flex-grow overflow-y-auto flex flex-col">
       <header class="sticky z-30 top-0">
         <%= render "shared/navbar" %>
-        <div id="flash" class="absolute right-4 z-40 flex flex-col items-end">
+      </header>
+        <div id="flash" class="absolute bottom-4 right-4 z-40 flex flex-col items-end">
           <%= render "shared/flash" %>
         </div>
-      </header>
       <main class="flex-grow p-2 lg:p-4">
         <%= yield %>
       </main>
