--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,5 +1,9 @@
-<aside class="hidden lg:flex flex-col justify-between border-r border-slate-300 w-52">
-  <%# Widescreen sidebar top %>
+<%# Mobile sidebar backdrop %>
+<div data-mobile-sidebar-target="backdrop" class="lg:hidden fixed inset-0 bg-gray-800/50 z-40 hidden" data-action="click->mobile-sidebar#close"></div>
+
+<%# Sidebar content %>
+<aside data-mobile-sidebar-target="sidebar" class="fixed lg:relative lg:flex flex-col justify-between border-r border-slate-300 w-52 bg-white h-full -translate-x-full lg:translate-x-0 transition-transform duration-300 z-50">
+  <%# Sidebar content %>
   <nav class="flex flex-col">
     <details class="">
       <summary class="btn-transparent font-semibold text-sm py-2 cursor-pointer">
