abstract svg, cleanup

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,10 +2,8 @@
   <div class="flex items-center gap-2">
     <% if signed_in? %>
       <%# Mobile menu button %>
-      <button data-action="click->mobile-sidebar#open" class="lg:hidden p-2 -ml-2">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
-        </svg>
+      <button data-action="click->mobile-sidebar#open" class="lg:hidden cursor-pointer">
+        <%= inline_svg_tag "svg/bars-3.svg", class: "size-6" %>
       </button>
 
       <% if current_organization %>
