--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -4,8 +4,8 @@
 <%# Sidebar content %>
 <aside data-mobile-sidebar-target="sidebar" class="fixed lg:flex flex-col justify-between border-r border-slate-300 w-52 bg-white h-full -translate-x-full lg:translate-x-0 transition-transform duration-300 z-50">
   <nav class="flex flex-col">
-    <details class="">
-      <summary class="btn-transparent font-semibold text-sm py-2 cursor-pointer">
+    <details class="group">
+      <summary class="btn-transparent font-semibold text-sm p-2 cursor-pointer [&::-webkit-details-marker]:hidden flex items-center justify-between">
         <% if current_organization %>
         <div class="inline-flex items-center gap-2 max-w-40">
           <div>
@@ -20,6 +20,7 @@
             Select Organization
           </div>
         <% end %>
+        <%= inline_svg_tag "svg/chevron-up-down.svg", class: "w-4 h-4 stroke-2 transition-transform duration-200 group-open:rotate-180" %>
       </summary>
       <div class="space-y-2 p-2 border-b border-slate-300">
         <%= active_link_to organizations_path, active: :exclusive, class_active: "bg-gray-300", class: "w-full btn btn-transparent flex items-center" do %>
