--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -46,7 +46,7 @@
 
     <% if current_organization %>
       <div class="space-y-2 p-2">
-        <%= render "shared/nav_links" %>
+        <%= render "shared/sidebar_links" %>
       </div>
     <% end %>
   </nav>
