--- a/app/views/shared/_sidebar_2_cols.html.erb
+++ b/app/views/shared/_sidebar_2_cols.html.erb
@@ -21,7 +21,7 @@
 
     <% if current_organization %>
       <div class="flex flex-col max-h-screen overflow-y-auto p-2 space-y-2 bg-slate-200">
-        <%= render "shared/nav_links" %>
+        <%= render "shared/sidebar_links" %>
       </div>
     <% end %>
   </nav>
