--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,48 +1,51 @@
-<aside class="hidden lg:flex flex-col justify-between bg-slate-200 w-52">
-  <%# Widescreen sidebar top %>
-  <nav class="flex flex-col">
-    <%= link_to root_path, class: "p-4" do %>
-      <%= image_tag "logo.png", alt: "logo", class: "h-10 w-auto" %>
-    <% end %>
+<%# Mobile sidebar backdrop %>
+<div data-mobile-sidebar-target="backdrop" class="lg:hidden fixed inset-0 bg-gray-800/50 z-40 hidden" data-action="click->mobile-sidebar#close"></div>
 
-    <details class="">
-      <summary class="hover:bg-gray-300 py-2 cursor-pointer">
-        <% if current_organization %>
-        <div class="inline-flex items-center gap-2 max-w-40">
+<%# Sidebar content %>
+<aside data-mobile-sidebar-target="sidebar" class="fixed lg:relative border-r border-slate-300 w-52 bg-white h-full -translate-x-full lg:translate-x-0 transition-transform duration-300 z-50">
+  <details class="group">
+    <summary class="btn-transparent font-semibold text-sm p-2 cursor-pointer [&::-webkit-details-marker]:hidden flex items-center justify-between group-open:bg-gray-100">
+      <% if current_organization %>
+      <div class="inline-flex items-center gap-2 max-w-40">
+        <div>
+          <%= organization_avatar(current_organization) %>
+        </div>
+        <div class="truncate">
+          <%= current_organization.name %>
+        </div>
+      </div>
+      <% else %>
+        <div class="py-1 inline-flex">
+          Select Organization
+        </div>
+      <% end %>
+      <%= inline_svg_tag "svg/chevron-up-down.svg", class: "w-4 h-4 stroke-2 transition-transform duration-200 group-open:rotate-180" %>
+    </summary>
+    <div class="space-y-2 p-2 border-b border-slate-300">
+      <%= active_link_to organizations_path, active: :exclusive, class_active: "bg-gray-300", class: "w-full btn btn-transparent flex items-center" do %>
+        <div>
+          <%= inline_svg_tag "svg/question-mark-circle.svg", class: "size-5" %>
+        </div>
+        <div>
+          All Organizations
+        </div>
+      <% end %>
+      <% current_user.organizations.excluding(current_organization).each do |organization| %>
+        <%= active_link_to organization_path(organization), class_active: "bg-gray-300", class: "w-full btn btn-transparent flex items-center" do %>
           <div>
-            <%= organization_avatar(current_organization) %>
+            <%= organization_avatar(organization) %>
           </div>
           <div class="truncate">
-            <%= current_organization.name %>
+            <%= organization.name %>
           </div>
-        </div>
-        <% else %>
-          Select Organization
         <% end %>
-      </summary>
-      <div class="space-y-2 p-2 border-b-2 border-slate-300">
-        <%= active_link_to "All Organizations", organizations_path, active: :exclusive, class_active: "bg-gray-300", class: "w-full btn btn-transparent" %>
-        <% current_user.organizations.excluding(current_organization).each do |organization| %>
-          <%= active_link_to organization_path(organization), class_active: "bg-gray-300", class: "w-full btn btn-transparent flex items-center" do %>
-            <div>
-              <%= organization_avatar(organization) %>
-            </div>
-            <div class="truncate">
-              <%= organization.name %>
-            </div>
-          <% end %>
-        <% end %>
-      </div>
-    </details>
+      <% end %>
+    </div>
+  </details>
 
-    <% if current_organization %>
-      <div class="space-y-2 p-2">
-        <%= render "shared/nav_links" %>
-      </div>
-    <% end %>
-  </nav>
-
-  <%# Widescreen sidebar bottom %>
-  <div class="p-4">
-  </div>
+  <% if current_organization %>
+    <div class="space-y-2 p-2">
+      <%= render "shared/sidebar_links" %>
+    </div>
+  <% end %>
 </aside>
