--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,22 +4,25 @@
     <%= render "layouts/head" %>
   </head>
 
-  <body class="flex h-screen">
-    <%#= render "shared/sidebar" if signed_in? %>
-    <%= render "shared/sidebar_2_cols" if signed_in? %>
+  <body class="flex h-screen" data-controller="mobile-sidebar">
+    <%= render "shared/sidebar" if signed_in? %>
+    <%#= render "shared/sidebar_2_cols" if signed_in? %>
 
     <div class="flex-grow overflow-y-auto flex flex-col">
       <header class="sticky z-30 top-0">
         <%= render "shared/navbar" %>
-        <div id="flash" class="absolute flex flex-col z-40 left-1/2 transform -translate-x-1/2">
-          <%= render "shared/flash" %>
-        </div>
       </header>
+      <div id="flash" class="absolute bottom-4 right-4 z-40 flex flex-col items-end">
+        <%= render "shared/flash" %>
+      </div>
       <main class="flex-grow p-2 lg:p-4">
         <%= yield %>
       </main>
-      <%= render "shared/footer" %>
-      <%= render "shared/footer_nav" %>
+      <% if signed_in? %>
+        <%= render "shared/footer_nav" %>
+      <% else %>
+        <%= render "shared/footer" %>
+      <% end %>
     </div>
   </body>
 </html>
