use -gray- instead of -slate-
simplify colors

--- a/app/views/shared/_footer_nav.html.erb
+++ b/app/views/shared/_footer_nav.html.erb
@@ -1,4 +1,4 @@
-<nav class="justify-around flex items-center lg:hidden sticky bottom-0 px-3 md:px-6 pt-2 pb-8 bg-slate-300">
+<nav class="justify-around flex items-center lg:hidden sticky bottom-0 px-3 md:px-6 pt-2 pb-8 bg-gray-300">
   <% if current_organization %>
     <%= active_link_to organization_inboxes_path(@organization), class_active: "text-blue-600", class: "flex flex-col items-center" do %>
       <%= inline_svg_tag "svg/user-group.svg", class: "size-8" %>
