--- a/app/views/organizations/_organization.html.erb
+++ b/app/views/organizations/_organization.html.erb
@@ -7,7 +7,7 @@
   <div class="flex items-center gap-4">
     <div class="flex items-center -space-x-2">
       <% organization.users.each do |user| %>
-        <div class="bg-slate-400 rounded-full size-8 justify-center flex items-center border text-sm" title="<%= user.email %>">
+        <div class="bg-gray-400 rounded-full size-8 justify-center flex items-center border text-sm" title="<%= user.email %>">
           <%= user.email[0..1] %>
         </div>
       <% end %>
