add svgs for dashboard and settings

--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -25,7 +25,7 @@
       <div class="space-y-2 p-2 border-b border-gray-300">
         <%= active_link_to organizations_path, active: :exclusive, class_active: "bg-gray-300", class: "w-full btn btn-transparent flex items-center" do %>
           <div>
-            <%= inline_svg_tag "svg/question-mark-circle.svg", class: "size-5" %>
+            <%= inline_svg_tag "svg/list-bullet.svg", class: "size-5" %>
           </div>
           <div>
             All Organizations
@@ -55,7 +55,7 @@
     <div class="border-t border-gray-300 space-y-2 p-2">
       <%= active_link_to organization_path(current_organization), active: :exclusive, class_active: "bg-gray-300", class: "w-full items-center btn btn-transparent" do %>
         <div>
-          <%= inline_svg_tag "svg/question-mark-circle.svg", class: "size-5" %>
+          <%= inline_svg_tag "svg/cog-6-tooth.svg", class: "size-5" %>
         </div>
         <div>
           Settings
