--- a/app/views/shared/_sidebar_links.html.erb
+++ b/app/views/shared/_sidebar_links.html.erb
@@ -1,6 +1,6 @@
 <%= active_link_to organization_dashboard_path(@organization), class_active: "bg-gray-300", class: "w-full items-center btn btn-transparent" do %>
   <div>
-    <%= inline_svg_tag "svg/question-mark-circle.svg", class: "size-5" %>
+    <%= inline_svg_tag "svg/home.svg", class: "size-5" %>
   </div>
   <div>
     Dashboard
