--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -25,7 +25,7 @@
       <div class="space-y-2 p-2 border-b border-gray-300">
         <%= active_link_to organizations_path, active: :exclusive, class_active: "bg-gray-300", class: "w-full btn btn-transparent flex items-center" do %>
           <div>
-            <%= inline_svg_tag "svg/list-bullet.svg", class: "size-5" %>
+            <%= inline_svg_tag "svg/rocket-launch.svg", class: "size-5" %>
           </div>
           <div>
             All Organizations
