--- a/app/views/shared/_sidebar_2_cols.html.erb
+++ b/app/views/shared/_sidebar_2_cols.html.erb
@@ -8,7 +8,7 @@
       <% end %>
 
       <%= active_link_to organizations_path, active: :exclusive, class_active: "bg-gray-400", class: "aspect-square flex justify-center items-center text-sm rounded-md border-4 border-transparent hover:border-gray-400 hover:bg-gray-600" do %>
-        <%= inline_svg_tag "svg/list-bullet.svg", class: "size-6" %>
+        <%= inline_svg_tag "svg/rocket-launch.svg", class: "size-6" %>
       <% end %>
       <div class="flex flex-col items-center space-y-2">
         <% current_user.organizations.each do |organization| %>
