--- a/app/views/shared/_footer_nav.html.erb
+++ b/app/views/shared/_footer_nav.html.erb
@@ -1,22 +1,22 @@
-<nav class="justify-around flex items-center lg:hidden sticky bottom-0 px-3 md:px-6 pt-2 pb-8 bg-gray-300">
+<nav class="justify-around flex items-center lg:hidden sticky bottom-0 px-4 py-3 bg-white border-t">
   <% if current_organization %>
-    <%= active_link_to organization_dashboard_path(@organization), class_active: "text-blue-600", class: "flex flex-col items-center" do %>
-      <%= inline_svg_tag "svg/home.svg", class: "size-8" %>
-      <div class="text-xs">
+    <%= active_link_to organization_dashboard_path(@organization), class_active: "!text-indigo-600", class: "flex flex-col items-center text-gray-600 hover:text-indigo-600 transition-colors duration-200 gap-1" do %>
+      <%= inline_svg_tag "svg/home.svg", class: "size-6" %>
+      <div class="text-xs font-medium">
         Dashboard
       </div>
     <% end %>
 
-    <%= active_link_to organization_inboxes_path(@organization), class_active: "text-blue-600", class: "flex flex-col items-center" do %>
-      <%= inline_svg_tag "svg/question-mark-circle.svg", class: "size-8" %>
-      <div class="text-xs">
+    <%= active_link_to organization_inboxes_path(@organization), class_active: "!text-indigo-600", class: "flex flex-col items-center text-gray-600 hover:text-indigo-600 transition-colors duration-200 gap-1" do %>
+      <%= inline_svg_tag "svg/question-mark-circle.svg", class: "size-6" %>
+      <div class="text-xs font-medium">
         Inboxes
       </div>
     <% end %>
   <% else %>
-    <%= active_link_to organizations_path, active: :exclusive, class_active: "text-blue-600", class: "flex flex-col items-center" do %>
-      <%= inline_svg_tag "svg/rocket-launch.svg", class: "size-8" %>
-      <div class="text-xs">
+    <%= active_link_to organizations_path, active: :exclusive, class_active: "!text-indigo-600", class: "flex flex-col items-center text-gray-600 hover:text-indigo-600 transition-colors duration-200 gap-1" do %>
+      <%= inline_svg_tag "svg/rocket-launch.svg", class: "size-6" %>
+      <div class="text-xs font-medium">
         Organizations
       </div>
     <% end %>
