--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -30,8 +30,8 @@
           <%= current_user.email %>
           <%= inline_svg_tag "svg/chevron-down.svg", class: "w-4 h-4 stroke-2 transition-transform duration-200 group-open:rotate-180" %>
         </summary>
-        <div class="absolute right-0 mt-1 bg-white border rounded-lg p-1">
-          <%= link_to "Edit Profile", edit_user_registration_path, class: "btn btn-transparent block w-full text-left" %>
+        <div class="absolute right-0 mt-1 bg-white border rounded-lg p-1 space-y-1">
+          <%= active_link_to "Edit Profile", edit_user_registration_path, class_active: "bg-gray-300", class: "btn btn-transparent block w-full text-left" %>
           <%= button_to "Log out", destroy_user_session_path, method: :delete, data: { turbo_confirm: "Are you sure?" }, class: "btn btn-transparent block w-full text-left" %>
         </div>
       </details>
