--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -5,7 +5,7 @@
 <aside data-mobile-sidebar-target="sidebar" class="fixed lg:relative border-r border-gray-300 w-52 bg-white h-dvh -translate-x-full lg:translate-x-0 transition-transform duration-300 z-50 flex flex-col">
   <div class="flex-1">
     <details class="group">
-      <summary class="btn-transparent font-semibold text-sm p-2 cursor-pointer [&::-webkit-details-marker]:hidden flex items-center justify-between group-open:bg-gray-100">
+      <summary class="btn-transparent font-medium text-sm p-2 cursor-pointer [&::-webkit-details-marker]:hidden flex items-center justify-between group-open:bg-gray-100">
         <% if current_organization %>
         <div class="inline-flex items-center gap-2 max-w-40">
           <div>
