--- a/app/views/organizations/subscriptions/_features.html.erb
+++ b/app/views/organizations/subscriptions/_features.html.erb
@@ -1,15 +1,15 @@
-<dl class="space-y-2">
-  <% Rails.application.config_for(:settings)[:pro_features].each do |feature| %>
-    <% key, value = feature.first %>
-    <div class="flex flex-col">
-      <dt class="font-semibold">
-        <%= key %>
-      </dt>
-      <% if details == true %>
+<%= render PageComponent.new(title: "Features") do %>
+  <dl class="space-y-2">
+    <% Rails.application.config_for(:settings)[:pro_features].each do |feature| %>
+      <% key, value = feature.first %>
+      <div class="flex flex-col">
+        <dt class="font-semibold">
+          <%= key %>
+        </dt>
         <dd class="italic text-sm">
           <%= sanitize(value, tags: %w[a], attributes: %w[href style]) %>
         </dd>
-      <% end %>
-    </div>
-  <% end %>
-</dl>
+      </div>
+    <% end %>
+  </dl>
+<% end %>
