--- a/app/views/organizations/subscriptions/_plan.html.erb
+++ b/app/views/organizations/subscriptions/_plan.html.erb
@@ -5,8 +5,8 @@
         <%= t("users.show.plan.subscription_cancelled") %>
       </dt>
       <dd>
-        <%= number_to_currency subscription.plan[:unit_amount] / 100, unit: currency_symbol(subscription.plan[:currency]), strip_insignificant_zeros: true %>
-        /<%= subscription.plan[:interval] %>
+        <%= number_to_currency plan_for(subscription)[:unit_amount] / 100, unit: currency_symbol(plan_for(subscription)[:currency]), strip_insignificant_zeros: true %>
+        /<%= plan_for(subscription)[:interval] %>
       </dd>
     </div>
 
@@ -21,7 +21,7 @@
   </dl>
 
   <div class="inline-flex">
-    <%= button_to t("users.show.plan.resume_subscription"), subscriptions_billing_portal_path, data: { turbo: "false" }, class: "btn btn-primary" %>
+    <%= button_to t("users.show.plan.resume_subscription"), organization_subscriptions_billing_portal_path(current_organization), data: { turbo: "false" }, class: "btn btn-primary" %>
   </div>
 <% elsif subscription.active? %>
   <dl class="space-y-2">
@@ -31,8 +31,8 @@
         <%= inline_svg_tag "svg/check-badge.svg", class: "size-6 inline stroke-white fill-blue-600" %>
       </dt>
       <dd>
-        <%= number_to_currency subscription.plan[:unit_amount] / 100, unit: currency_symbol(subscription.plan[:currency]), strip_insignificant_zeros: true %>
-        /<%= subscription.plan[:interval] %>
+        <%= number_to_currency plan_for(subscription)[:unit_amount] / 100, unit: currency_symbol(plan_for(subscription)[:currency]), strip_insignificant_zeros: true %>
+        /<%= plan_for(subscription)[:interval] %>
       </dd>
     </div>
 
@@ -47,16 +47,6 @@
   </dl>
 
   <div class="inline-flex">
-    <%= button_to t("users.show.plan.manage_billing"), subscriptions_billing_portal_path, data: { turbo: false }, class: "btn btn-secondary" %>
+    <%= button_to t("users.show.plan.manage_billing"), organization_subscriptions_billing_portal_path(current_organization), data: { turbo: false }, class: "btn btn-secondary" %>
   </div>
 <% end %>
-
-<h2 class="text-xl md:text-3xl">
-  <%= t("users.show.plan.features") %>
-</h2>
-
-<%= render "users/features", details: true %>
-
-<div class='text-slate-400 text-sm'>
-  ℹ️ If you have a linked Github account, you will get an automatic invite to the Github repositories. Otherwise please contact support.
-</div>
