--- a/app/views/organizations/subscriptions/_plan.html.erb
+++ b/app/views/organizations/subscriptions/_plan.html.erb
@@ -28,7 +28,7 @@
     <div class="flex justify-between">
       <dt class="font-semibold">
         <%= t("users.show.plan.subscription_active") %>
-        <%= inline_svg_tag "svg/check-badge.svg", class: "size-6 inline stroke-white fill-blue-600" %>
+        <%= subscription_status_label(current_organization) %>
       </dt>
       <dd>
         <%= number_to_currency plan_for(subscription)[:unit_amount] / 100, unit: currency_symbol(plan_for(subscription)[:currency]), strip_insignificant_zeros: true %>
