--- a/app/views/shared/_sidebar_links.html.erb
+++ b/app/views/shared/_sidebar_links.html.erb
@@ -1,4 +1,4 @@
 <%= nav_link organization_dashboard_path(@organization), "Dashboard", "svg/home.svg" %>
+<%= nav_link organization_paywalled_page_path(@organization), "Paywalled page", "🔐", target: "_blank" %>
 <%= nav_link organization_inboxes_path(@organization), "Inboxes", "svg/question-mark-circle.svg" %>
-<%= nav_link organization_paywalled_page_path(@organization), "Paywalled", "🔐", target: "_blank" %>
 
