display billing logic only if api keys present

--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -46,7 +46,7 @@
 
   <% if current_organization %>
     <div class="border-t border-gray-300 space-y-2 p-2">
-      <%= nav_link organization_subscriptions_path(current_organization), "Billing #{subscription_status_label(current_organization)}", "svg/credit-card.svg" %>
+      <%= nav_link organization_subscriptions_path(current_organization), "Billing #{subscription_status_label(current_organization)}", "svg/credit-card.svg" if Rails.application.credentials.dig(:stripe, :private_key).present? %>
       <%= nav_link organization_path(current_organization), "Settings", "svg/cog-6-tooth.svg" %>
       <%= nav_link organization_memberships_path(current_organization), "Users", "svg/user-group.svg" %>
     </div>
