--- a/app/views/shared/_sidebar_links.html.erb
+++ b/app/views/shared/_sidebar_links.html.erb
@@ -1,3 +1,3 @@
-<%= nav_link organization_dashboard_path(@organization), "Dashboard", "svg/home.svg" %>
-<%= nav_link organization_paywalled_page_path(@organization), "Paywalled page", "🔐", target: "_blank" if Rails.application.credentials.dig(:stripe, :private_key).present? %>
-<%= nav_link organization_inboxes_path(@organization), "Inboxes", "svg/question-mark-circle.svg" %>
+<%= nav_link "Dashboard", organization_dashboard_path(@organization), icon: "svg/home.svg" %>
+<%= nav_link "Paywalled page", organization_paywalled_page_path(@organization), icon: "🔐", target: "_blank" if Rails.application.credentials.dig(:stripe, :private_key).present? %>
+<%= nav_link "Inboxes", organization_inboxes_path(@organization), icon: "svg/question-mark-circle.svg" %>
